compiler-core/src/parse/snapshots/gleam_core__parse__tests__four_gt_not_merge_conflict.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wobble: Int = 32\n>>>>"
---
----- SOURCE CODE
let wobble: Int = 32
>>>>

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ >>>>
  │ ^^ I was not expecting this

Found `>>`, expected one of: 
- An import, const, type, or function.
